--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "Spell-and-Grammar-4-MD",
 	"displayName": "Spelling and Grammar Checker",
-	"description": "Detect mistakes as you type and sugges fixes - great for Markdown.",
+	"description": "Detect mistakes as you type and suggest fixes - great for Markdown.",
 		"icon": "icon.jpg",
 	"version": "0.0.5",
 	"publisher": "seanmcbreen",
