--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
 	"displayName": "Spelling and Grammar Checker",
 	"description": "Detect mistakes as you type and suggest fixes - great for Markdown.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.0.7",
+	"version": "0.0.11",
 	"publisher": "seanmcbreen",
+	"galleryBanner": {
+		"color": "#5c2d91",
+		"theme": "dark"
+	},
 	"license": "SEE LICENSE IN LICENSE.md",
 	"bugs": {
 		"url": "https://github.com/Microsoft/vscode-spell-check/issues",
@@ -15,7 +19,9 @@
 		"type": "git",
 		"url": "https://github.com/Microsoft/vscode-spell-check.git"
 	},
-	"categories": ["Test"], 
+	"categories": [
+		"Test"
+	],
 	"engines": {
 		"vscode": "*"
 	},
