--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Spelling and Grammar Checker",
 	"description": "Detect mistakes as you type and suggest fixes - great for Markdown.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.0.11",
+	"version": "0.0.12",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
 		"color": "#5c2d91",
@@ -23,7 +23,7 @@
 		"Test"
 	],
 	"engines": {
-		"vscode": "*"
+		"vscode": "0.10.x"
 	},
 	"activationEvents": [
 		"onLanguage:markdown"
