--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"displayName": "Spelling and Grammar Checker",
 	"description": "Detect mistakes as you type and suggest fixes - great for Markdown.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.0.12",
+	"version": "0.0.15",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
-		"color": "#5c2d91",
+		"color": "#0000FF",
 		"theme": "dark"
 	},
 	"license": "SEE LICENSE IN LICENSE.md",
