--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Spelling and Grammar Checker",
 	"description": "Detect mistakes as you type and suggest fixes - great for Markdown.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.0.24",
+	"version": "0.1.0",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
 		"color": "#0000FF",
@@ -20,7 +20,7 @@
 		"url": "https://github.com/Microsoft/vscode-spell-check.git"
 	},
 	"categories": [
-		"Linters", "Languages", "Other"
+		"Linters", "Other"
 	],
 	"engines": {
 		"vscode": "0.10.x"
