--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"displayName": "Spelling and Grammar Checker",
 	"description": "Detect mistakes as you type and suggest fixes - great for Markdown.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
-		"color": "#0000FF",
+		"color": "#9D161B",
 		"theme": "dark"
 	},
 	"license": "SEE LICENSE IN LICENSE.md",
