--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "Spell",
 	"displayName": "Spelling and Grammar Checker",
-	"description": "Detect mistakes as you type and suggest fixes - great for Markdown.",
+	"description": "Detect mistakes as you type and suggest fixes - great for Markdown.  Now supports 5 languages.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
 		"color": "#5c2d91",
