--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "Spell",
 	"displayName": "Spelling and Grammar Checker",
-	"description": "Detect mistakes as you type and suggest fixes - great for Markdown or any text file.",
+	"description": "Detect mistakes as you type and suggest fixes using a web service - great for Markdown or any text file.",
 	"icon": "images/spellIcon.svg",
 	"version": "0.5.0",
 	"publisher": "seanmcbreen",
