Add Markdown Activation and improve activation perf

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "Spell",
 	"displayName": "Spelling and Grammar Checker",
-	"description": "Detect mistakes as you type and suggest fixes using a web service - great for Markdown or any text file.",
+	"description": "Detect mistakes as you type and suggest fixes - great for Markdown or any text file.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.5.0",
+	"version": "0.5.1",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
 		"color": "#5c2d91",
@@ -26,7 +26,8 @@
 		"vscode": "0.10.x"
 	},
 	"activationEvents": [
-		"*"
+		"*",
+		"onLanguage:markdown"
 	],
 	"contributes": {
 		"commands": [
