--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "Spell",
 	"displayName": "Spelling and Grammar Checker",
-	"description": "Detect mistakes as you type and suggest fixes - great for Markdown or any text file.",
+	"description": "Uses a web service to detect mistakes and suggest fixes - great for Markdown or any text file.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.6.0",
+	"version": "0.6.1",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
 		"color": "#5c2d91",
