Readme - debounce updates - auto load

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Spelling and Grammar Checker",
 	"description": "Uses a web service to detect mistakes and suggest fixes - great for Markdown or any text file.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.6.2",
+	"version": "0.7.0",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
 		"color": "#5c2d91",
@@ -23,7 +23,7 @@
 		"Linters", "Other"
 	],
 	"engines": {
-		"vscode": "0.10.x"
+		"vscode": "^1.0.0"
 	},
 	"activationEvents": [
 		"*",
@@ -50,13 +50,14 @@
 	"main": "./out/extension",
 	"scripts": {
 		"vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-		"compile": "node ./node_modules/vscode/bin/compile -watch -p ./"
+		"compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+		"postinstall": "node ./node_modules/vscode/bin/install"
 	},
 	"dependencies": {
 		"teacher": "^0.1.0"
 	},
 	"devDependencies": {
-		"vscode": "0.10.x",
+		"vscode": "^0.11.0",
         "typescript": "^1.6.2"
 	}
 }
