Ensure .vscode when creating configuration
If .vscode directory didn't exist, writing spell.json would fail. Make
sure .vscode exists before writing spell.json.

Fix #42

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"postinstall": "node ./node_modules/vscode/bin/install"
 	},
 	"dependencies": {
+		"mkdirp": "^0.5.1",
 		"teacher": "^0.1.0"
 	},
 	"devDependencies": {
