--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
 			"args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
 			"stopOnEntry": false,
 			"outDir": "${workspaceRoot}/out",
+			"sourceMaps": true,
 			"preLaunchTask": "npm"
 		}
 	]
