--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Spelling and Grammar Checker",
 	"description": "Uses a web service to detect mistakes and suggest fixes - great for Markdown or any text file.",
 	"icon": "images/spellIcon.svg",
-	"version": "0.8.6",
+	"version": "0.9.0",
 	"publisher": "seanmcbreen",
 	"galleryBanner": {
 		"color": "#5c2d91",
@@ -68,10 +68,12 @@
 		"postinstall": "node ./node_modules/vscode/bin/install"
 	},
 	"dependencies": {
-		"teacher": "^0.1.0"
+		"teacher": "^0.1.0",
+		"request": "2.9.152",
+		"xml2js": "0.1.13"
 	},
 	"devDependencies": {
 		"vscode": "^0.11.0",
-		"typescript": "^1.6.2"
+		"typescript": "^2.0.10"
 	}
 }
