--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
 		"commands": [
 			{
 				"command": "SpellProvider.changeLanguage",
-				"title": "Spell Checker: Change Language"
+				"title": "Change Language",
+				"category": "Spell Checker"
 			}
 		],
 		"keybindings": [
