--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,13 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
-			"args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
+			"args": [
+				"--extensionDevelopmentPath=${workspaceRoot}"
+			],
 			"stopOnEntry": false,
-			"outDir": "${workspaceRoot}/out",
+			"outFiles": [
+				"${workspaceRoot}/out"
+			],
 			"sourceMaps": true,
 			"preLaunchTask": "npm"
 		}
