--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "ES5",
+		"target": "ES6",
 		"outDir": "out",
-		"noLib": true,
+        "lib": [
+            "es6"
+        ],
 		"sourceMap": true
 	},
 	"exclude": [
